fix partners logo alignment for mobile (SAF)

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -500,7 +500,7 @@ h1.flexible {
   }
 
   .partners svg {
-    max-width: none;
+    /* max-width: none; */
     max-height: 5rem;
     margin: 0 0 1.5rem 1.5rem;
     position: absolute;
